corrected overflow issue

--- a/css/overflow.css
+++ b/css/overflow.css
@@ -16,7 +16,3 @@
     /* aligh the  span with the one besides it   */
     vertical-align: top;
 }
-
-
-
-body {}
